# Eng-de-Software-UFRN

./: LICENSE  PROJECT_PRINCIPLES.md  README.md  USER_STORIES.md
database-dashboard/: app.py  create_table.sql  pyproject.toml  select_delivery_speed.sql  select_mean_speed_per_delivery.sql  table_deliveries.sql  view_select_delivery_speed.sql
database-dashboard/delivery_metrics/: query_deliver_efficiency_by_age.sql  query_deliver_efficiency_by_rating.sql  query_speed_histogram.sql  query_speed_vs_rating.sql  query_time_by_festival.sql  query_time_taken_by_weather_conditions.sql  query_top_fastest_delivery_persons.sql  query_top_slowest_delivery_persons.sql  view_master.sql
diagrams/: diagrama_casos_usuario.drawio.xml  diagrama_de_classes.drawio.xml
tomaladaka/: .gitignore  README.md  TESTS.md  design_patterns.md  pom.xml  test.sh
tomaladaka/src/main/java/com/umbrella/tomaladaka/: TomaladakaApplication.java
tomaladaka/src/main/java/com/umbrella/tomaladaka/controller/: ItemController.java  OrderController.java  RestaurantController.java  UserController.java
tomaladaka/src/main/java/com/umbrella/tomaladaka/dto/: OrderRequest.java  RestaurantRequest.java  UserRequest.java
tomaladaka/src/main/java/com/umbrella/tomaladaka/model/: Address.java  Cart.java  Item.java  Menu.java  Order.java  PaymentMethod.java  Restaurant.java  Status.java  User.java
tomaladaka/src/main/java/com/umbrella/tomaladaka/service/: CartService.java  (+5 more)
tomaladaka/src/main/resources/: application.properties
tomaladaka/src/test/java/com/umbrella/tomaladaka/: TomaladakaApplicationTests.java
(+9 files in other folders)
